- code cleanups - add name of currently-logged-in user to page header

--- a/src/templates/en_US/common/basic_header.tmpl
+++ b/src/templates/en_US/common/basic_header.tmpl
@@ -13,7 +13,7 @@
     </tr>
     <tr>
       <td>
-        You are at: <b>{$page_title}</b>
+        Welcome <b>{$page_user_name}</b>.  You are at: <b>{$page_title}</b>
       </td>
       <td align='right' valign='top'>
         <font color='white'>
