A whole pile of updates: 	- league view 	- cleanups to team view, completion of team roster view 	- clean up db handling to use php builtin helper functions 	- added error-handler for DB to Handler.php

--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,28 @@ TABLE {
   color: red;
   text-decoration: none;
 }
+
+.teamlist_title, .roster_title {
+	background-color:    black;
+	color:               white;
+	font-weight:         bold;
+	border-bottom-width: 1px;
+	border-bottom-color: black;
+	border-bottom-style: solid;
+	font-size: 11px;
+}
+
+.roster_subtitle {
+	font-weight:         bold;
+	border-bottom-width: 1px;
+	border-bottom-color: black;
+	border-bottom-style: solid;
+	font-size: 11px;
+}
+
+.teamlist_item, .roster_item {
+	border-bottom-width: 1px;
+	border-bottom-color: gray;
+	border-bottom-style: solid;
+	font-size: 11px;
+}
