--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,7 @@ TABLE {
   text-decoration: none;
 }
 
-.menu_title, .schedule_title, .teamlist_title, .roster_title {
+.standings_title, .menu_title, .schedule_title, .teamlist_title, .roster_title {
 	background-color:    black;
 	color:               white;
 	font-weight:         bold;
@@ -93,7 +93,7 @@ TABLE {
 	font-size: 11px;
 }
 
-.roster_subtitle {
+.standings_subtitle, .roster_subtitle {
 	font-weight:         bold;
 	border-bottom-width: 1px;
 	border-bottom-color: black;
@@ -101,7 +101,7 @@ TABLE {
 	font-size: 11px;
 }
 
-.menu_item, .schedule_item, .teamlist_item, .roster_item {
+.standings_item, .menu_item, .schedule_item, .teamlist_item, .roster_item {
 	border-bottom-width: 1px;
 	border-bottom-color: gray;
 	border-bottom-style: solid;
