- add a credits link to the footer

--- a/src/templates/en_US/common/basic_footer.tmpl
+++ b/src/templates/en_US/common/basic_footer.tmpl
@@ -1,2 +1,7 @@
+<p />
+<hr noshade />
+<div align="right">
+<i>Powered by <a href="http://www.dmo.ca/projects/leaguerunner/">Leaguerunner</a></i>
+</div>
 </body>
 </html>
