- support for viewing field info - parameterize product name for footer - fix URL for team website - fix team-view failure when assistant captain no longer exists

--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,15 @@ TABLE {
 	border-bottom-style: solid;
 	font-size: 11px;
 }
+.booking_item {
+	font-size: 11px;
+}
+.booking_item_ul {
+	border-bottom-width: 1px;
+	border-bottom-color: gray;
+	border-bottom-style: solid;
+	font-size: 11px;
+}
 
 a {
 	text-decoration: none;
