--- a/src/templates/en_US/Team/schedule_view.tmpl
+++ b/src/templates/en_US/Team/schedule_view.tmpl
@@ -17,24 +17,25 @@
   <tr>
     <td class="schedule_item">{$game.date}</td>
     <td class="schedule_item">{$game.time}</td>
-    <td class="schedule_item"><a href="{$app_cgi_location}?op=team_view;id={$game.opponent_id}">{$game.opponent_name}</a></td>
-    <td class="schedule_item"><a href="{$app_cgi_location}?op=field_view;id={$game.field_id}">{$game.field_name}</a></td>
+    <td class="schedule_item"><a href="{$app_cgi_location}?op=team_view;id={$game.opponent_id}">{$game.opponent_name}</a>&nbsp;</td>
+    <td class="schedule_item"><a href="{$app_cgi_location}?op=field_view;id={$game.field_id}">{$game.field_name}</a>&nbsp;</td>
     <td class="schedule_item">({$game.home_away})&nbsp;</td>
     <td class="schedule_item">
       {if $game.score_type eq 'final'}
         {$game.score_us} - {$game.score_them}{if $game.default}(default {$default}){/if}
       {else}
         {if $game.score_type eq 'entered'}
-          entered {$game.score_us} - {$game.score_them}
+          {$game.score_us} - {$game.score_them}
         {/if}
       {/if}
+      &nbsp;
     </td>
     <td class="schedule_item">
       {if $game.score_type eq 'final'}
       (accepted final)
       {else}
         {if $game.score_type eq 'entered'}
-          (waiting for opponent entry)
+          (unofficial, waiting for opponent)
         {else}
           [ <a href="{$app_cgi_location}?op=game_submitscore;id={$game.id};team={$team_id}">submit score</a> ]
         {/if}
