Point to the right operation for creating new users

--- a/src/templates/en_CA/Login.tmpl
+++ b/src/templates/en_CA/Login.tmpl
@@ -50,7 +50,7 @@
 	If you've forgotten your password, you can <a href="{$app_cgi_location}?op=forgot">reset it</a> here. 
 	</P>
 	<P>
-    Otherwise, feel free to  <A HREF="{$app_cgi_location}?op=newuser">create a new account</a>.
+    Otherwise, feel free to  <A HREF="{$app_cgi_location}?op=person_create">create a new account</a>.
 	</P>
 	<P>
 	Please note that this site uses cookies to store authentication information.
