First cut of editing a person's data.  Probably needs cleaning up.  Certainly needs validation of user input.

--- a/src/templates/en_CA/Person/edit_form.tmpl
+++ b/src/templates/en_CA/Person/edit_form.tmpl
@@ -9,7 +9,7 @@
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
 	<input type="hidden" name="step" value="{$page_step}">
-	<input type="hidden" name="id" value="{$user_id}">
+	<input type="hidden" name="id" value="{$id}">
 	<table border="0">
     <tr>
       <td class='row_title'>First Name:</td> 
