--- a/src/templates/en_CA/Person/edit_confirm.tmpl
+++ b/src/templates/en_CA/Person/edit_confirm.tmpl
@@ -1,10 +1,13 @@
 {include file="$app_template_dir/common/basic_header.tmpl"}
 <h1>Editing {$firstname} {$lastname}</h1>
+<p>
+  Confirm that the data below is correct, and hit continue to make your changes.
+</p>
 
 <form action="{$app_cgi_location}" method="POST">
 	<input type="hidden" name="op" value="{$page_op}">
 	<input type="hidden" name="step" value="{$page_step}">
-	<input type="hidden" name="id" value="{$user_id}">
+	<input type="hidden" name="id" value="{$id}">
 	<table border="0">
     <tr>
       <td class='row_title'>First Name:</td> 
@@ -15,15 +18,15 @@
       <td class='row_data'><input type="hidden" name="lastname" value="{$lastname}">{$lastname}</td>
     </tr>
 
+    {if $perm_edit_username}
     <tr>
       <td class='row_title'>System Username:</td> 
       <td class='row_data'>
-        {if $perm_edit_username}
         <input type="hidden" name="username" value="{$username}">
-        {/if}
         {$username}
       </td>
     </tr>
+    {/if}
 
     {if $perm_edit_password}
     <tr>
